<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:contentDescription="@string/app_name"
       android:scaleType="centerCrop"
       android:src="@drawable/background"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundLayer"/>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_stay_fit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_money_with_our_membership_cards"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSignIn"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        app:layout_constraintTop_toBottomOf="@id/textDescription"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="textEmailAddress"
        android:hint="@string/xyz_gmail_com"
        android:minHeight="35dp"
        android:gravity="top"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
        app:layout_constraintStart_toEndOf="@id/imageEmail"
        android:textColorHint="@color/colorTextHint"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        tools:ignore="Autofill,LabelFor" />

    <View
        android:id="@+id/viewEmailDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorTextHint"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

    <ImageView
        android:id="@+id/imageEmail"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/mail"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="@id/textEmail"
        app:layout_constraintBottom_toTopOf="@id/viewEmailDivider"
        app:layout_constraintStart_toStartOf="@id/viewEmailDivider"/>

 <TextView
     android:id="@+id/textPassword"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
     android:layout_marginTop="30dp"
     android:text="@string/password"
     android:textAllCaps="true"
     android:textColor="@color/white"
     android:textSize="13sp"
     app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
     app:layout_constraintStart_toEndOf="@id/imageEmail"
     app:layout_constraintTop_toBottomOf="@id/viewEmailDivider"/>


 <EditText
     android:id="@+id/inputPassword"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:background="@null"
     android:inputType="textPassword"
     android:hint="@string/password_hint"
     android:minHeight="35dp"
     android:gravity="top"
     android:textColor="@color/white"
     android:layout_marginStart="10dp"
     app:layout_constraintEnd_toEndOf="@id/viewEmailDivider"
     app:layout_constraintStart_toEndOf="@id/imageEmail"
     android:textColorHint="@color/colorTextHint"
     android:textSize="17sp"
     app:layout_constraintTop_toBottomOf="@id/textPassword"
     tools:ignore="Autofill" />

 <ImageView
     android:id="@+id/imagePassword"
     android:layout_width="28dp"
     android:layout_height="28dp"
     android:layout_marginStart="8dp"
     android:contentDescription="@string/app_name"
     android:src="@drawable/password"
     app:tint="@color/white"
     app:layout_constraintTop_toTopOf="@id/textPassword"
     app:layout_constraintBottom_toTopOf="@id/viewPasswordDivider"
     app:layout_constraintStart_toStartOf="@id/viewEmailDivider"/>

 <View
     android:id="@+id/viewPasswordDivider"
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:layout_marginStart="50dp"
     android:layout_marginEnd="50dp"
     android:background="@color/colorTextHint"
     app:layout_constraintTop_toBottomOf="@id/inputPassword"/>

 <Button
     android:id="@+id/buttonSignIn"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:layout_marginStart="50dp"
     android:layout_marginTop="30dp"
     android:layout_marginEnd="50dp"
     android:background="@drawable/button_background"
     android:text="@string/sign_in"
     android:textColor="@color/white"
     android:textSize="14sp"
     android:textStyle="bold"
     app:layout_constraintTop_toBottomOf="@id/viewPasswordDivider"/>

 <TextView
     android:id="@+id/textForgotPassword"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
     android:text="@string/forgot_password"
     android:textColor="@color/white"
     android:textSize="16sp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/buttonSignIn"/>

 <LinearLayout
     android:id="@+id/layoutSocial"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="40dp"
     android:gravity="center"
     android:orientation="horizontal"
     app:layout_constraintTop_toBottomOf="@id/textForgotPassword">

       <ImageView
           android:layout_width="35dp"
           android:layout_height="35dp"
           android:contentDescription="@string/app_name"
           android:src="@drawable/facebook"
           app:tint="@color/white" />
  <ImageView
      android:layout_width="35dp"
      android:layout_height="35dp"
      android:layout_marginStart="5dp"
      android:layout_marginEnd="5dp"
      android:contentDescription="@string/app_name"
      android:src="@drawable/google"
      app:tint="@color/white" />
  <ImageView
      android:layout_width="35dp"
      android:layout_height="35dp"
      android:contentDescription="@string/app_name"
      android:src="@drawable/twitter"
      app:tint="@color/white" />

 </LinearLayout>

 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toBottomOf="@id/layoutSocial"
     android:gravity="center"
     android:textColor="@color/white"
     android:layout_marginTop="15dp"
     android:layout_marginStart="50dp"
     android:layout_marginEnd="50dp"
     android:textSize="16sp"
     android:text="@string/don_t_have_an_account_sign_up_now"/>

</androidx.constraintlayout.widget.ConstraintLayout>